--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
   FPC_URL: 'gitlab'
   FPC_BRANCH: 'release_3_2_2'
   LAZ_URL: 'gitlab'
-  LAZ_REVISION_2_4: '5719672f10190551b9af7dd7f1761aae1c280297'
+  LAZ_REVISION: 'lazarus_3_0'
   LAZ_DIR: 'fpcLaz'
   FPCUP_OPT: '' #'--lazopt="-g -gl" --fpcopt="-g -gl"'
   VTV_SOURCE: '${{ github.workspace }}/vtv_src'
@@ -48,6 +48,8 @@ jobs:
             build-widgetset: win32
           - os: ubuntu-20.04
             build-widgetset: qt6
+          - os: ubuntu-20.04
+            build-widgetset: gtk3
             
           - os: windows-latest
             build-widgetset: gtk2
@@ -58,8 +60,6 @@ jobs:
             build-widgetset: win32
           - os: ubuntu-22.04
             build-widgetset: gtk2
-          - os: ubuntu-22.04
-            build-widgetset: gtk3
           - os: ubuntu-22.04
             build-widgetset: qt5
         
@@ -93,25 +93,25 @@ jobs:
     - name: Install Dependencies (Ubuntu - only QT5)
       if: contains( matrix.os, 'ubuntu') && matrix.build-widgetset == 'qt5'
       run: |
-        wget https://github.com/davidbannon/libqt5pas/releases/download/v1.2.12/libqt5pas1_2.12-3_amd64.deb
-        wget https://github.com/davidbannon/libqt5pas/releases/download/v1.2.12/libqt5pas-dev_2.12-3_amd64.deb
+        wget https://github.com/davidbannon/libqt5pas/releases/download/v1.2.15/libqt5pas1_2.15-1_amd64.deb
+        wget https://github.com/davidbannon/libqt5pas/releases/download/v1.2.15/libqt5pas-dev_2.15-1_amd64.deb
         sudo apt-get update
         sudo apt-get -m -y install qt5-qmake qtbase5-dev qt5-default libqt5x11extras5-dev libxcb-keysyms1-dev
-        sudo apt-get -m -y install ./libqt5pas1_2.12-3_amd64.deb
-        sudo apt-get -m -y install ./libqt5pas-dev_2.12-3_amd64.deb
+        sudo apt-get -m -y install ./libqt5pas1_2.15-1_amd64.deb
+        sudo apt-get -m -y install ./libqt5pas-dev_2.15-1_amd64.deb
         
     - name: Install Dependencies (Ubuntu - only QT6)
       if: contains( matrix.os, 'ubuntu') && matrix.build-widgetset == 'qt6'
       run: |
-        wget https://github.com/davidbannon/libqt6pas/releases/download/v6.2.5/libqt6pas6_6.2.5-1_amd64.deb
-        wget https://github.com/davidbannon/libqt6pas/releases/download/v6.2.5/libqt6pas6-dev_6.2.5-1_amd64.deb
+        wget https://github.com/davidbannon/libqt6pas/releases/download/v6.2.7/libqt6pas6_6.2.7-1_amd64.deb
+        wget https://github.com/davidbannon/libqt6pas/releases/download/v6.2.7/libqt6pas6-dev_6.2.7-1_amd64.deb
         sudo apt-get update
         sudo apt-get -m -y install qt6-base-dev libxcb-keysyms1-dev libgl-dev qt6-base-private-dev
-        sudo apt-get -m -y install ./libqt6pas6_6.2.5-1_amd64.deb
-        sudo apt-get -m -y install ./libqt6pas6-dev_6.2.5-1_amd64.deb
+        sudo apt-get -m -y install ./libqt6pas6_6.2.7-1_amd64.deb
+        sudo apt-get -m -y install ./libqt6pas6-dev_6.2.7-1_amd64.deb
 
     - name: Generate Cache Hash
-      run: echo "${{ matrix.fpcup-url }}${{ env.FPCUP_OPT }}${{ env.FPC_URL }}${{ env.FPC_BRANCH }}${{ env.LAZ_URL }}${{ env.LAZ_REVISION_2_4 }}" > .cache
+      run: echo "${{ matrix.fpcup-url }}${{ env.FPCUP_OPT }}${{ env.FPC_URL }}${{ env.FPC_BRANCH }}${{ env.LAZ_URL }}${{ env.LAZ_REVISION }}" > .cache
 
     - name: Cache
       id: cache
@@ -129,7 +129,7 @@ jobs:
         curl --retry 5 -L -o fpcup ${{ matrix.fpcup-url }}
         chmod +x fpcup
         mkdir ${{ env.LAZ_DIR }}
-        ./fpcup --installdir=${{ env.LAZ_DIR }} --fpcURL=${{ env.FPC_URL }} --fpcBranch=${{ env.FPC_BRANCH }} --lazURL=${{ env.LAZ_URL }} --lazRevision=${{ env.LAZ_REVISION_2_4 }} ${{ env.FPCUP_OPT }} --only=docker --noconfirm --verbose
+        ./fpcup --installdir=${{ env.LAZ_DIR }} --fpcURL=${{ env.FPC_URL }} --fpcBranch=${{ env.FPC_BRANCH }} --lazURL=${{ env.LAZ_URL }} --lazRevision=${{ env.LAZ_REVISION }} ${{ env.FPCUP_OPT }} --only=docker --noconfirm --verbose
         
     - name: Install packages
       run: |
