--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ env:
   FPC_URL: 'gitlab'
   FPC_BRANCH: 'release_3_2_2'
   LAZ_URL: 'gitlab'
-  LAZ_BRANCH: 'lazarus_3_6'
+  LAZ_BRANCH: 'lazarus_4_0'
   LAZ_DIR: 'fpcLaz'
   FPCUP_OPT: '' #'--lazopt="-g -gl" --fpcopt="-g -gl"'
   VTV_SOURCE: '${{ github.workspace }}/vtv_src'
@@ -28,29 +28,18 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, ubuntu-20.04, ubuntu-22.04]
+        os: [windows-latest, ubuntu-22.04]
         build-widgetset: [win32, gtk2, gtk3, qt5, qt6]
         include:
           - os: windows-latest
             fpcup-url: 'https://github.com/LongDirtyAnimAlf/Reiniero-fpcup/releases/download/v2.4.0f/fpclazup-x86_64-win64.exe'
             lazbuild: 'fpcLaz/lazarus/lazbuild.exe'
             
-          - os: ubuntu-20.04
-            fpcup-url: 'https://github.com/LongDirtyAnimAlf/Reiniero-fpcup/releases/download/v2.4.0f/fpclazup-x86_64-linux'
-            lazbuild: 'fpcLaz/lazarus/lazbuild'
-            
           - os: ubuntu-22.04
             fpcup-url: 'https://github.com/LongDirtyAnimAlf/Reiniero-fpcup/releases/download/v2.4.0f/fpclazup-x86_64-linux'
             lazbuild: 'fpcLaz/lazarus/lazbuild'
             
-        exclude:
-          - os: ubuntu-20.04
-            build-widgetset: win32
-          - os: ubuntu-20.04
-            build-widgetset: qt6
-          - os: ubuntu-20.04
-            build-widgetset: gtk3
-            
+        exclude:            
           - os: windows-latest
             build-widgetset: gtk2
           - os: windows-latest
@@ -58,10 +47,6 @@ jobs:
             
           - os: ubuntu-22.04
             build-widgetset: win32
-          - os: ubuntu-22.04
-            build-widgetset: gtk2
-          - os: ubuntu-22.04
-            build-widgetset: qt5
         
 
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -96,7 +81,7 @@ jobs:
         wget https://github.com/davidbannon/libqt5pas/releases/download/v1.2.16/libqt5pas1_2.16-4_amd64.deb
         wget https://github.com/davidbannon/libqt5pas/releases/download/v1.2.16/libqt5pas-dev_2.16-4_amd64.deb
         sudo apt-get update
-        sudo apt-get -m -y install qt5-qmake qtbase5-dev qt5-default libqt5x11extras5-dev libxcb-keysyms1-dev
+        sudo apt-get -m -y install qt5-qmake qtbase5-dev libqt5x11extras5-dev libxcb-keysyms1-dev
         sudo apt-get -m -y install ./libqt5pas1_2.16-4_amd64.deb
         sudo apt-get -m -y install ./libqt5pas-dev_2.16-4_amd64.deb
         
